feat: improve links

--- a/ip.html
+++ b/ip.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Ip Tree visualiser</title>
     <link rel="stylesheet" href="./vendor/css/ip.css" />
+    <link rel="icon" type="image/x-icon" href="./vendor/img/favicon.ico" />
   </head>
 
   <body>
@@ -72,7 +73,10 @@
             </label>
           </li>
         </ul>
-        <a href="https://github.com/TendTo/Tutorato-Reti-di-Calcolatori">
+        <a
+          href="https://github.com/TendTo/Tutorato-Reti-di-Calcolatori"
+          target="_blank"
+        >
           <svg
             viewBox="0 0 98 96"
             width="24"
@@ -113,10 +117,6 @@
             href="https://github.com/TendTo/Tutorato-Reti-di-Calcolatori/issues"
             >issue</a
           >.
-        </p>
-        <p>
-          Made by
-          <a href="https://github.com/TendTo">TendTo</a>
         </p>
       </footer>
     </div>
