feat: allow ip selection

--- a/ip.html
+++ b/ip.html
@@ -99,6 +99,8 @@
           </canvas>
         </div>
         <div id="show">
+          Click on a node to show its information.<br />
+          Right click on a node to select it and hide its children.
           <p><b>Ip: </b><span id="showIp"></span></p>
           <p><b>Netmask: </b><span id="showNetmask"></span></p>
           <p><b>Base Ip: </b> <span id="showNetwork"></span></p>
